# docker-auth-pract

./: .dockerignore  .env  .env-non-dev  .gitignore  Dockerfile  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 2024_07_01_1818-2dc30d2568e0_create_tables.py  2024_07_01_1841-bafaaa23df53_unique.py  2024_07_02_1135-d7b713ebd3c5_refresh_token.py  2024_07_02_1233-d2fa0f76d449_delete_refresh.py  9421eb77e8eb_test.py  d75d2eb54b8a_create_table.py  debe6de8264b_tasks.py
certs/: README.md
src/: main.py
src/api_v1/: __init__.py
src/api_v1/basic_auth/: views.py
src/api_v1/cookie_auth/: views.py
src/api_v1/demo_auth/: views.py
src/api_v1/header_auth/: views.py
src/api_v1/jwt_auth/: utils_jwt.py  validation.py  views.py
src/api_v1/task/: crud.py  dependencies.py  schemas.py  view.py
src/api_v1/user/: crud.py  dependencies.py  schemas.py  view.py
src/db/: config.py  db_helper.py
src/db/models/: __init__.py  base.py  task.py  user.py
tests/: conftest.py  test_tasks.py
